fixed Server response overlaping UnifiedSearch button

--- a/ModernAqua/css/style.css
+++ b/ModernAqua/css/style.css
@@ -719,7 +719,7 @@ div.moduleTitle {
 /* display statistics in aqua bar bottom */
 #statistics {
     position:fixed;
-    bottom:0; left:250px; right:250px;
+    bottom:0; left:450px; right:450px;
     padding:5px;
     height:23px; line-height:23px;
     color:#000;
